add the database using postgresSQL

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=sqlite:///data.db
+DATABASE_URL=postgresql://postgres:Vaidehi@21@localhost/events_db
 OPENAI_API_KEY=your_openai_api_key_here
